# bgb-llm

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
app/: config.py  main.py  prepare_db.py  rag.py
