[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.41.1"
langchain-mistralai = "^0.2.3"
langchain-huggingface = "^0.1.2"
langchain-core = "^0.3.25"
pypdf = "^5.1.0"
langchain-community = "^0.3.11"
langgraph = "^0.2.59"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
